        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.11-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : minor
Bugzilla   : 16583
Frequency  : rare
Description: avoid messages about idr_remove called for id  which is not allocated. 
Details    : Move assigment s_dev for clustered nfs to end of initialization, for avoid
             problem with error handling.

Severity   : minor
Bugzilla   : 16109
Frequency  : rare
Description: avoid Already found the key in hash [CONN_UNUSED_HASH] messages
Details    : When connection is reused this not moved from CONN_UNUSED_HASH into
             CONN_USED_HASH and this prodice warning when put connection again
             in unused hash.

Severity   : enhancement
Bugzilla   : 16573
Description: Export bytes_read/bytes_write count on OSC/OST.

Severity   : normal
Bugzilla   : 16237
Description: Early reply size mismatch, MGC loses connection
Details    : Apply the MGS_CONNECT_SUPPORTED mask at reconnect time so
             the connect flags are properly negotiated.

Severity   : normal
Bugzilla   : 16006
Description: Properly propagate oinfo flags from lov to osc for statfs
Details    : restore missing copy oi_flags to lov requests.

Severity   : enhancement
Bugzilla   : 16581
Description: Add man pages for llobdstat(8), llstat(8), plot-llstat(8),
           : l_getgroups(8), lst(8), routerstat(8)
Details    : included man pages for llobdstat(8), llstat(8),
           : plot-llstat(8), l_getgroups(8), lst(8), routerstat(8)

Severity   : enhancement
Bugzilla   : 16091
Description: configure's --enable-quota should check the
           : kernel .config for CONFIG_QUOTA
Details    : configure is terminated if --enable-quota is passed but